--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "PUBLIC_URL=https://angelolev.github.io/cl-react/ npm run build",
+    "predeploy": "env PUBLIC_URL=https://angelolev.github.io/cl-react/ npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
