--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.15.1",
     "react-modal": "^3.12.1",
+    "react-redux": "^7.2.5",
+    "react-redux-firebase": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "redux": "^4.1.1",
+    "redux-firestore": "^0.15.0",
+    "redux-thunk": "^2.3.0",
     "sweetalert2": "^10.14.0"
   },
   "scripts": {
