--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.15.1",
+    "react-loading-skeleton": "^2.2.0",
     "react-modal": "^3.12.1",
     "react-redux": "^7.2.5",
     "react-redux-firebase": "^3.10.0",
