--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "^6.15.1",
+    "react-hook-form": "^7.19.1",
     "react-loading-skeleton": "^2.2.0",
     "react-modal": "^3.12.1",
     "react-redux": "^7.2.5",
@@ -23,7 +23,8 @@
     "redux": "^4.1.1",
     "redux-firestore": "^0.15.0",
     "redux-thunk": "^2.3.0",
-    "sweetalert2": "^10.14.0"
+    "sweetalert2": "^10.14.0",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
